:sparkles: custom exception for retrieve non existing key/file, :recycle: and Path insted of string for copy parameters